Wed Aug 31 01:04:46 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Updated the repo location of CUTS.

Fri Aug 26 06:20:47 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Removed the BMW project from the workspace.

        * CUTS_Runtime_Arch.mwc:

          Removed CCF from the workspace.

Thu Aug 18 20:17:53 UTC 2011  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/workers/CPU/CPU_Worker_T.h:
        * cuts/workers/CPU/CPU_Worker_T.cpp:

          Updated to pass the scaling factor as a command line argument.

Wed Aug 10 14:29:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/bmw.doxygen:

          Removed this file.

Thu Aug  4 19:54:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/generate_autobuild_properties.py:

          Updated script to generate a environment variables
          property file.

Wed Aug  3 16:32:52 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS_Runtime_Arch.mwc:

          Fixed errors in configuration.

        * etc/scripts/generate_autobuild_properties.py:

          New script that generates a default Java properties files that
          can be used with the autobuild.

Tue Aug  2 21:37:37 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * tutorials/LargeScale:
        * tutorials/LargeScale/LargeScale.xme:

          Initial version of large scale model.

Mon Aug  1 19:12:27 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Updated script to work with Python 3.

Mon Aug  1 16:24:43 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          The configuration file is written to the prefix location.

Mon Aug  1 16:17:25 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
